<resources>
    <string name="app_name">ParkPal</string>
    <string name="header">Park Pal</string>
    <string name="app_description">New Westminster\'s Park Companion</string>
    <string name="view_all_on_map">View All Park Features on Map</string>
    <string name="title_activity_all_parks_map">AllParksMapsActivity</string>
    <string name="title_activity_all_parks_maps">Map</string>
    <string name="toggle_benches">Toggle Benches</string>
    <string name="back_button"><![CDATA[< BACK]]></string>
    <string name="park_toggle_off">Show Parks</string>
    <string name="park_toggle_on">Hide Parks</string>
    <string name="bench_toggle_off">Show Benches</string>
    <string name="bench_toggle_on">Hide Benches</string>
    <string name="dog_area_toggle_off">Show Dog Areas</string>
    <string name="dog_area_toggle_on">Hide Dog Areas</string>
    <string name="fountain_toggle_off">Show Fountains</string>
    <string name="fountain_toggle_on">Hide Fountains</string>
    <string name="playground_toggle_off">Show Playgrounds</string>
    <string name="playground_toggle_on">Hide Playgrounds</string>
    <string name="sports_fields_toggle_off">Show Sports Fields</string>
    <string name="sports_fields_toggle_on">Hide Sports Fields</string>
    <string name="washrooms_toggle_off">Show Washrooms</string>
    <string name="washrooms_toggle_on">Hide Washrooms</string>
    <string name="search_for_parks">Search for a Park</string>
    <string-array name="JsonFiles">
        <item>PARKS.json</item>
        <item>PLAYGROUNDS.json</item>
        <item>SPORTS_FIELDS.json</item>
        <item>WASHROOMS.json</item>
        <item>DRINKING_FOUNTAINS.json</item>
        <item>OFFLEASH_DOG_AREAS.json</item>
        <item>BENCHES.json</item>
    </string-array>
    <string name="title_activity_park__search_">Park_Search_Activity</string>
    <string name="enter_park_name">Enter park name (optional)</string>
    <string name="park_search_label">Park Name:</string>
    <string name="bench_search_label">Benches</string>
    <string name="fountain_search_label">Fountains</string>
    <string name="dog_area_search_label">Offleash dog area</string>
    <string name="playground_search_label">Playground</string>
    <string name="sports_field_search_label">Sports Field</string>
    <string name="washrooms_search_label">Washrooms</string>
    <string name="title_activity_search_maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>
